<resources>
    <string name="app_name">ChallengeFour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">note</string>
    <string name="title">title</string>
    <string name="title_save">title_save</string>
    <string name="label_new_note_dialog">label_new_note</string>
    <string name="content_desc_close_dialog_button">content_desc_close_dialog_button</string>
    <string name="preference_file_key">file_challenge4</string>
    <string name="label_edit_note_dialog">Edit Data</string>
    <string name="title_update">Update</string>
    <string name="delete_note_button">Delete Button</string>
</resources>